# rolling_ball_tracking

./: .clangd  .gitignore  CMakeLists.txt
cmake/: ball_tracker-config.cmake.in
config/: balls_config.json  track_trajectory.json
docs/: API_Documentation.md
include/: ball_tracker_algo.h  ball_tracker_common.h  ball_tracker_interface.h  camera_control.h
scripts/: build_debug.ps1  build_mac.sh  build_release.ps1  build_windows.bat  clean.sh  clean_windows.bat  visualize_trajectory.py
src/: ball_tracker_algo.cpp  ball_tracker_interface.cpp  camera_control.cpp
test/: CMakeLists.txt  ball_detection_test.cpp  ball_tracking_test.cpp  camera_control_test.cpp  huarui_grab.cpp  huarui_video.cpp
